--- a/cvl_get-started.ipynb
+++ b/cvl_get-started.ipynb
@@ -3,10 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc86b307-f125-4777-a357-1b655b38260e",
+   "id": "292f22db-7e7b-4be9-942d-f1dd20d68950",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CVL - Get started\n",
+    "\n",
+    "## Import packages\n",
+    "\n",
     "from osgeo import gdal"
    ]
   }
