--- a/cvl_get-started.ipynb
+++ b/cvl_get-started.ipynb
@@ -6,9 +6,28 @@
    "metadata": {},
    "source": [
     "# CVL - Get started\n",
-    "\n",
-    "## Import packages\n",
-    "\n",
+    "Get started\n",
+    "with\n",
+    "some\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b91b307-3225-451a-b0ed-c4a6c5950337",
+   "metadata": {},
+   "source": [
+    "# Import packages\n",
+    "This is how to import packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c611e7e3-a2d2-47e0-bd8f-539236c759f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from osgeo import gdal"
    ]
   }
