--- a/cvl_get-started.ipynb
+++ b/cvl_get-started.ipynb
@@ -599,7 +599,7 @@
    "metadata": {},
    "source": [
     "## B) Working with data products locally (not supporting OPeNDAP)\n",
-    "In case data can not be accessed using the OPeNDAP protocol, a local copy of the dataset is required. We will use use `requests` library to obtain the data over HTTP and `tempfile` mmodule to remove the file after the information is extracted."
+    "In case data can not be accessed using the OPeNDAP protocol, a local copy of the dataset is required. We will use use `requests` library to obtain the data over HTTP and `tempfile` module to remove the file after the information is extracted."
    ]
   },
   {
