--- a/cvl_get-started.ipynb
+++ b/cvl_get-started.ipynb
@@ -7,7 +7,12 @@
    "source": [
     "---\n",
     "# CVL - Get started\n",
-    "This is a Jupyter Notebook to get you started on a typical CVL workflow."
+    "This is a Jupyter Notebook to get you started on a typical CVL workflow.\n",
+    "It provides some examples on how to\n",
+    "- generally format a notebook\n",
+    "- import data\n",
+    "- work with the data\n",
+    "- create some results in form of a visualisation"
    ]
   },
   {
@@ -1241,6 +1246,16 @@
     "ax.add_feature(cartopy.feature.LAND)\n",
     "ax.add_feature(cartopy.feature.OCEAN)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aecfa54",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Summary\n",
+    "That was it. We hope this notebook was helpful to get you started and to show an example how to format a Jupyter notebook so it can be read like a story."
+   ]
   }
  ],
  "metadata": {
@@ -1259,7 +1274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
