--- a/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
+++ b/S1_sea_ice_classification/sentinel_search_Fram_Strait.ipynb
@@ -11,7 +11,8 @@
     "from dateparser import parse\n",
     "import datetime\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "from loguru import logger"
    ]
   },
   {
@@ -73,9 +74,7 @@
    ],
    "source": [
     "# establish connection to Copernicus Scihub\n",
-    "user = \"your_username\"\n",
-    "password = \"your_password\"\n",
-    "api = SentinelAPI(user, password)\n",
+    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])\n",
     "\n",
     "# search over Fram Strait for S1 imagery (from 1st Dec 2020 to 1st June 2021)\n",
     "# use custom geojson files containing search polygon\n",
@@ -124,7 +123,19 @@
     "    # if overlapping S2 scenes found, add the S1 id and corresponding S2 query results in dictionary\n",
     "    if not len(s2_products) == 0:\n",
     "        s1_list_with_overlap.append(product)\n",
-    "        s1_s2_overlap[product] = s2_products"
+    "        s1_s2_overlap[product] = s2_products\n",
+    "        \n",
+    "# this list is contains the S1 scenes that have overlapping S2 imagery\n",
+    "print('Found', len(s1_list_with_overlap), 'S1 scenes with overlapping S2 imagery.')\n",
+    "print(s1_list_with_overlap)\n",
+    "\n",
+    "# make copy of the original query results\n",
+    "s1_products_with_overlap = s1_products.copy()\n",
+    "\n",
+    "# loop over all original query results and only keep the ones that have overlapping S2\n",
+    "for product in s1_products:\n",
+    "    if not product in s1_list_with_overlap:\n",
+    "        del s1_products_overlap[product]"
    ]
   },
   {
@@ -153,18 +164,6 @@
     }
    ],
    "source": [
-    "# this list is contains the S1 scenes that have overlapping S2 imagery\n",
-    "print('Found', len(s1_list_with_overlap), 'S1 scenes with overlapping S2 imagery.')\n",
-    "print(s1_list_with_overlap)\n",
-    "\n",
-    "# make copy of the original query results\n",
-    "s1_products_with_overlap = s1_products.copy()\n",
-    "\n",
-    "# loop over all original query results and only keep the ones that have overlapping S2\n",
-    "for product in s1_products:\n",
-    "    if not product in s1_list_with_overlap:\n",
-    "        del s1_products_overlap[product]\n",
-    "        \n",
     "# download all quicklooks of S1 images that have overlapping S2\n",
     "api.download_all_quicklooks(s1_products_overlap)\n",
     "\n",
