started adusting to delivery folder strucure

--- a/belgica_bank_SAR_time_series/belgica_bank_sat_search.ipynb
+++ b/belgica_bank_SAR_time_series/belgica_bank_sat_search.ipynb
@@ -5,39 +5,43 @@
    "id": "e6720903-acff-4ffc-86e7-8e651cafacf2",
    "metadata": {},
    "source": [
-    "# User case: Belgica Bank time series\n",
+    "# Introduction\n",
+    "---\n",
     "\n",
-    "### Find Sentinel-1 data\n",
+    "This notebook shows how to generate a time series of Sentinel-1 imagery for a given time period over a specific region of interest (ROI).\n",
+    "\n",
+    "\n",
+    "#### Find Sentinel-1 data\n",
     "Use the _SentinelAPI_ from _sentinelsat_ to find all Sentinel-1 imagery that covering a user-defined region of interest (ROI) in a given time period.\n",
     "The ROI is defined as a polygon in a geojson file. Visit for \"geojson.io\" to create your own example.\n",
     "The time period is hard-coded in the user-defined search parameters (starttime and endtime).\n",
     "\n",
     "\n",
-    "### Process the Sentinel-1 imagery\n",
+    "#### Process the Sentinel-1 imagery\n",
     "Use the Sentinel-1 name string to build the correct path to the location of the netcdf data on the met server. Load and calibrate HH and HV channel and visualize the data.\n",
     "\n",
     "\n",
-    "### Requirements\n",
+    "#### Requirements\n",
     "Requirement package are listed in \"provision.sh\"."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e3cf6bb-23c1-40bc-b733-9c7e953076d8",
+   "metadata": {},
+   "source": [
+    "## Import libraries\n",
+    "---\n",
+    "Import required libraries:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "21c37764-090f-491c-b2ed-92888fc34535",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /opt/conda/share/proj failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# imports\n",
-    "import sys\n",
     "from os import environ\n",
     "from dotenv import load_dotenv\n",
     "from loguru import logger\n",
@@ -54,24 +58,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b316a5e-21f2-4b6d-97db-33974e714281",
+   "metadata": {},
+   "source": [
+    "## Set loglevel for logger output\n",
+    "---\n",
+    "Set the loglevel to _ERROR_, _WARNING_, _INFO_, or _DEBUG_ to control information output to screen:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "304ea308-83ca-4b44-9d9a-d1c8cf6e34c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# define loglevel\n",
     "loglevel = 'INFO'\n",
     "logger.remove()\n",
     "logger.add(sys.stderr, level=loglevel)"
@@ -82,8 +95,8 @@
    "id": "c2bcc31d-1fa5-4b5a-87cd-fe9faf3405c3",
    "metadata": {},
    "source": [
-    "### Enable copernicus scihub access\n",
-    "\n",
+    "## Enable copernicus scihub access\n",
+    "---\n",
     "Use of the _sentinelAPI_ requires an account at _https://scihub.copernicus.eu/dhus/_. You can avoid hardcoding your scihub username and password in this notebook by using environment variables. To do this, create a file called \".env\" with the following lines in the same folder as this notebook:\n",
     "\n",
     ">DHUS_USER=\"your-scihub-username\"  \n",
@@ -94,15 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "b1d97ff2-17c2-4380-adc3-cad6e96880d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create environment variables stored in your \".env\" file\n",
     "load_dotenv()\n",
     "\n",
-    "# get copernicus.scihub username and password from environment variables\n",
     "USERNAME = environ.get('DHUS_USER')\n",
     "PASSWORD = environ.get('DHUS_PASSWORD')\n",
     "\n",
@@ -110,7 +121,7 @@
     "if USERNAME == None:\n",
     "    logger.error('USERNAME is: \"None\". Set variables correctly in \".env\" file.')\n",
     "if PASSWORD == None:\n",
-    "    logger.error('PASSWORD is: \"None\". Set variables correctly in \".env\" file.')\n"
+    "    logger.error('PASSWORD is: \"None\". Set variables correctly in \".env\" file.')"
    ]
   },
   {
@@ -118,28 +129,28 @@
    "id": "f5423625-fc73-4771-866f-523a59534012",
    "metadata": {},
    "source": [
-    "### Define sentinelAPI search parameters\n",
-    "\n",
-    "Define the search parameters for your query. The region of interest is defined as a polygon in geojson format. The _area_relation_ should be chosen depending on the size of your ROI and the specific needs of your project. For example, choose _Contains_ for a small ROI to ensure that the entire ROI is covered, or choose _Intersects_ for large ROIs to include all imagery that covers only parts of the ROI."
+    "## Define search parameters\n",
+    "---\n",
+    "Define the search parameters for your _sentinelAPI_ query. The ROI is defined as a polygon in geojson format. The _area_relation_ should be chosen depending on the size of your ROI and the specific needs of your project. For example, choose _Contains_ for a small ROI to ensure that the entire area is covered, or choose _Intersects_ for large ROIs to include all imagery that covers only parts of the area."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "4230b4af-5f1d-4260-aca8-06916b0fb43c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define search parameters\n",
-    "\n",
-    "# area and area relation\n",
+    "# geojson file with ROI polygon\n",
     "json_file = 'belgica_bank.geojson'\n",
+    "\n",
+    "# cover the full polygon?\n",
     "area_relation = 'Intersects'\n",
     "##area_relation = 'Contains'\n",
     "\n",
     "# time interval\n",
     "starttime = parse('2022-04-01T00:00:00', settings={\"DATE_ORDER\": \"YMD\"})\n",
-    "endtime   = parse('2022-04-01T23:59:59', settings={\"DATE_ORDER\": \"YMD\"})\n",
+    "endtime   = parse('2022-04-05T23:59:59', settings={\"DATE_ORDER\": \"YMD\"})\n",
     "\n",
     "logger.debug(f'json_file:     {json_file}')\n",
     "logger.debug(f'starttime:     {starttime}')\n",
@@ -148,8 +159,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a9d7fa9-0225-4e4c-b89d-7ee1e16f5d9d",
+   "metadata": {},
+   "source": [
+    "## Create sentinelAPI and search for S1 data\n",
+    "---\n",
+    "Perform the _sentinelAPI_ query. This will search in the external _copernicus.scihub_ data base, results will be listed in _S1_result_dict_."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "1a12ef56-7578-41b1-a5b9-b0c17ed9815c",
    "metadata": {},
    "outputs": [],
@@ -172,14 +193,14 @@
    "id": "b3df4fc1-88c7-496c-ac8e-b740d8d0a432",
    "metadata": {},
    "source": [
-    "### List search results\n",
-    "\n",
-    "Get the number of results for your search parameters and write all the S1 name strings to a txt file. If you later want to download the SAFE folders of your search result, you can use this file to create download URLs for creodias (for example)."
+    "## Inspect search results\n",
+    "---\n",
+    "Get some information about your search results. Download of the _SAFE_ folders from copernicus.scihub is slow and usually crashes at the time of writing this. You can access the data in _netcdf_ format from the met server (see below), or you can download the _SAFE_ format later on a different PC. For this purpose, all S1 name strings are written to a text file (_result_file_), which can be used to build download URLS for example from creodias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "4af0cb1b-546d-4daa-afaf-342b0c6d3ef1",
    "metadata": {},
    "outputs": [
@@ -187,9 +208,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-02 22:31:38.808 | INFO     | __main__:<module>:3 - Found 2 Sentinel-1 images\n",
-      "2023-02-02 22:31:38.810 | INFO     | __main__:<module>:10 - Image 1/2: S1A_EW_GRDM_1SDH_20220401T075454_20220401T075554_042577_051429_AACB\n",
-      "2023-02-02 22:31:38.812 | INFO     | __main__:<module>:10 - Image 2/2: S1A_EW_GRDM_1SDH_20220401T075349_20220401T075454_042577_051429_E721\n"
+      "2023-02-03 10:21:38.434 | INFO     | __main__:<module>:3 - Found 8 Sentinel-1 images\n",
+      "2023-02-03 10:21:38.436 | INFO     | __main__:<module>:10 - Image 1/8: S1A_EW_GRDM_1SDH_20220405T072159_20220405T072259_042635_05162B_B65D\n",
+      "2023-02-03 10:21:38.437 | INFO     | __main__:<module>:10 - Image 2/8: S1A_EW_GRDM_1SDH_20220405T072054_20220405T072159_042635_05162B_4244\n",
+      "2023-02-03 10:21:38.439 | INFO     | __main__:<module>:10 - Image 3/8: S1A_EW_GRDM_1SDH_20220404T180447_20220404T180547_042627_0515F3_2686\n",
+      "2023-02-03 10:21:38.439 | INFO     | __main__:<module>:10 - Image 4/8: S1A_EW_GRDM_1SDH_20220404T081913_20220404T082013_042621_0515BE_D75F\n",
+      "2023-02-03 10:21:38.440 | INFO     | __main__:<module>:10 - Image 5/8: S1A_EW_GRDM_1SDH_20220403T073723_20220403T073828_042606_05152E_DDA1\n",
+      "2023-02-03 10:21:38.440 | INFO     | __main__:<module>:10 - Image 6/8: S1A_EW_GRDM_1SDH_20220403T073828_20220403T073928_042606_05152E_77C0\n",
+      "2023-02-03 10:21:38.441 | INFO     | __main__:<module>:10 - Image 7/8: S1A_EW_GRDM_1SDH_20220401T075454_20220401T075554_042577_051429_AACB\n",
+      "2023-02-03 10:21:38.441 | INFO     | __main__:<module>:10 - Image 8/8: S1A_EW_GRDM_1SDH_20220401T075349_20220401T075454_042577_051429_E721\n"
      ]
     }
    ],
@@ -201,7 +228,7 @@
     "# initialize list of found images\n",
     "img_list = []\n",
     "\n",
-    "# loop over search results, print, and append to img_list\n",
+    "# loop over search results, print to screen, and append to img_list\n",
     "for i,key in enumerate(S1_result_dict.keys()):\n",
     "    logger.info(f\"Image {i+1}/{n_imgs}: {S1_result_dict[key]['title']}\")\n",
     "    img_list.append(S1_result_dict[key]['title'])\n",
@@ -217,14 +244,14 @@
    "id": "5a71b3a9-3164-45e0-88fc-bb132a15c6d6",
    "metadata": {},
    "source": [
-    "### Test processing chain\n",
-    "\n",
-    "Before looping over all search results, test the processing on the first hit."
+    "## Test data access, processing, and visualization\n",
+    "---\n",
+    "Before looping over all search results, test the processing on the first hit in your search results:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "id": "88bc6caf-c0ae-4c65-a59f-441b587d60ff",
    "metadata": {},
    "outputs": [],
@@ -238,9 +265,9 @@
    "id": "6c9d4058-a1c6-44ca-b922-0e90fc854f91",
    "metadata": {},
    "source": [
-    "### Build data URL\n",
-    "\n",
-    "Use the S1 name string to build the correct path to the location of the netcdf data on the met server. "
+    "## Build data URL\n",
+    "---\n",
+    "Use the S1 name string to build the correct path to the location of the _netcdf_ data on the met server:"
    ]
   },
   {
@@ -270,29 +297,29 @@
    "id": "ed790dc2-d608-4488-98be-8a07039da43d",
    "metadata": {},
    "source": [
-    "### Load required data\n",
-    "\n",
+    "## Load required data\n",
+    "---\n",
     "Load HH and HV amplitude and calibration lookup table. The connection to the server with the netcdf data is slow, so for a first visualization, you may not want to load to entire image. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "d70a1771-6952-47fb-99b7-ca5b9ff4b50d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# connection to the server is very slow\n",
-    "# sub-step when loading data set\n",
+    "# => sub-step when loading data set\n",
     "stride = 5\n",
     "\n",
     "# HH\n",
-    "DN_HH        = S1_dst[\"Amplitude_HH\"][0,::stride,::stride]\n",
-    "LUT_HH       = S1_dst[\"sigmaNought_HH\"][0,::stride,::stride]\n",
+    "DN_HH  = S1_dst[\"Amplitude_HH\"][0,::stride,::stride]\n",
+    "LUT_HH = S1_dst[\"sigmaNought_HH\"][0,::stride,::stride]\n",
     "\n",
     "# HV\n",
-    "DN_HV        = S1_dst[\"Amplitude_HV\"][0,::stride,::stride]\n",
-    "LUT_HV       = S1_dst[\"sigmaNought_HV\"][0,::stride,::stride]\n",
+    "DN_HV  = S1_dst[\"Amplitude_HV\"][0,::stride,::stride]\n",
+    "LUT_HV = S1_dst[\"sigmaNought_HV\"][0,::stride,::stride]\n",
     "\n",
     "# lat/lon\n",
     "lon = S1_dst['lon'][::stride,::stride]\n",
@@ -321,14 +348,14 @@
    "id": "6c426269-9e67-4794-9b12-f300be2588c3",
    "metadata": {},
    "source": [
-    "### Calibrate to sigma0 in dB\n",
-    "\n",
-    "Use the LUT to calibrate HH and HV to sigma0 and convert to dB. The calibration is described here: _https://sentinels.copernicus.eu/web/sentinel/radiometric-calibration-of-level-1-products_"
+    "## Calibrate HH and HV\n",
+    "---\n",
+    "Use the LUT to calibrate HH and HV channels to sigma0 and convert to dB. You can also add the noise coorection at this point. Calibration and noise correction are described here: _https://sentinels.copernicus.eu/web/sentinel/radiometric-calibration-of-level-1-products_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5b5503a5-4df6-4e59-9d53-9701214c678c",
    "metadata": {},
    "outputs": [],
@@ -345,9 +372,9 @@
    "id": "b3a7c555-25e9-4c8e-b86b-6c1939d6a0a8",
    "metadata": {},
    "source": [
-    "### Find min/max values to adjust dynamic range\n",
-    "\n",
-    "For better visualization, you may want to adjust the dynamic range of imshow or pcolormesh. You can either hardcode values, to make the color or grayscale of different images comparable, or you use flexible min and max values based on the percentiles of the data."
+    "## Find min/max percentiles\n",
+    "---\n",
+    "For better visualization, you may want to adjust the dynamic range of _imshow_ or _pcolormesh_. You can hardcode _vmin_ and _vmax_ values to make the color or grayscale of different images comparable, or you use flexible _vmin_ and _vmax_ values based on the percentiles of the data."
    ]
   },
   {
@@ -385,9 +412,9 @@
    "id": "761a3473-0749-4ab0-9dc9-194325cda7ee",
    "metadata": {},
    "source": [
-    "### Stack to false-color RGB\n",
-    "\n",
-    "Use the min/max percentiles to normalize (scale) the individual channels and stack them to a false-color RGB image. A commonly used combination of channels for dual-pol data is for example red: HV, green: HH, blue: HH."
+    "## Stack to false-color RGB\n",
+    "---\n",
+    "Use the _vmin/vmax_ percentiles to normalize (scale) the individual channels and stack them to a false-color RGB image. A commonly used combination of channels for dual-pol data is for example red: HV, green: HH, blue: HH."
    ]
   },
   {
@@ -418,9 +445,9 @@
    "id": "2f4c9b11-4e1a-4a69-886d-94243bce5a3f",
    "metadata": {},
    "source": [
-    "### Visualize in radar geometry\n",
-    "\n",
-    "Visualize the calibrated data (HH and HV as grayscale and false-color RGB) for a first visual check. Images are displayed in the radar geometry."
+    "## Visualize in radar geometry\n",
+    "---\n",
+    "Visualize the calibrated data (HH and HV as individual grayscale and combined as false-color RGB) for a first visual check. Images are displayed in the radar geometry (azimuth-x-range)."
    ]
   },
   {
